[metadata]
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[bdist_wheel]
universal = 0

[coverage:run]
source = evrmore_rpc
omit = 
    tests/*
    */site-packages/*

[coverage:report]
exclude_lines = 
    pragma: no cover
    def __repr__
    raise NotImplementedError
    if __name__ == .__main__.:
    pass
    raise ImportError

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist,venv,env
ignore = E203, W503

[isort]
profile = black
line_length = 100

[mypy]
python_version = 3.8
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true 